--- a/blog.html
+++ b/blog.html
@@ -897,9 +897,7 @@ it's super customizable ( i can even change the icons ), i can read and respond 
 and surprisingly enough, everything runs very smoothly on this phone .. i expected it to be a little slow, but no, it's actually super responsive and works great !
 i really really recommend it <sub>💓</sub>
 
-i still use my regular smartphone from time to time when i'm at home to watch videos, read blog entries or play some mobile games - although i prefer to use my laptop or ipad - sometimes a small screen is more comfortable to my eyes.
-but just so you know how little i'm using it in fact, i've been only charging it once or twice a week. giving how quickly the battery goes away, isn't that amazing ??
-( also i mostly only use the browser since i uninstalled all social media apps, i think that helps too )
+i still use my regular smartphone from time to time, but only when i need to do tests, so i mostly only use the browser since i uninstalled all social media apps .. and i always prefer to use my ipad for watching stuff, or playing mobile games !
 
 reducing screen time is something complicated, because you have to organize your routine for knowing when you should use your devices, for which reason, and for how much time it would be appropriate.
 for making sure you won't be using the smartphone unnecessarily for longer periods, i think a simpler phone can be helpful : it has only the absolutely necessary features you need, so you won't be wasting time or getting distracted !
@@ -912,13 +910,14 @@ it's just important to be careful and find balance between virtual & real life <
 talking on smartphones, i actually got a new one, so now i have two of them .. which is ironic, since i didn't actually wanted it, but rather needed it. why ? <sub>📱</sub>
 well, my current android phone is alright, it's a little old ( xiaomi redmi 6a ) but it works fine and as i mentioned i barely have been even using it since i got my new adorable flip phone <font color="#d3a5a5" style="font-size:11px;">♡</font>
 but, remember when i bought my ipad last year ?
-i actually wanted one, i do use it quite a lot, it's fun and useful for working and testing things too,, but i noticed a factor with testing my stuff on the ipad : the screen size !
+i actually wanted one, i do use it quite a lot, like i mentioned, it's fun and useful for working and testing things too,, but i noticed a factor with testing my stuff on the ipad : the screen size !
 many people use ios, but it's mostly on iphones.
 testing things on the ipad is okay enough so i can assure it works, but i recently used an iphone and found many issues on my websites, when it comes to display adaptations !!
 sadly i couldn't really replicate these results on my ipad screen, so i wasn't able to fix many of these problems for a long time ..
 
 so, for working on these fixes and assuring that ios users are really being able to use my websites properly on all devices, i finally decided to buy an iphone. the iphone 8.
-yes i simply bought the cheapest one i could find, since i'm basically just going to use the browser & do tests ( since i don't use social media anymore, and i use my flip phone for most functionalities ) i am not worried about it becoming outdated until a few more years.
+yes i simply bought the cheapest one i could find, considering that it will stay untouched for most of the time, just like my android smartphone is now.
+i'm basically just going to use the browser & do tests ( since i don't use social media anymore, and i use my flip phone & ipad for most mobile functionalities ) i am not worried about it becoming outdated until a few more years.
 in fact, i find it better to do tests on devices that are a bit old & slow, because if it works it means it's well optimized !
 my smartphones look similar to each other, so i made matching cases and themes for them :</pre>
 <br><br>
