--- a/fashion.html
+++ b/fashion.html
@@ -526,6 +526,8 @@ and get a glimpse of my passion for frills & lace</font></th>
 <br>
 <img width="280px" height="auto" src="https://file.pooftie.me/f/7.jpg"/><br><br>
 <br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/08.jpg"/><br><br>
+<br>
 <img width="280px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
 <br>
 <img width="280px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
@@ -569,6 +571,8 @@ and get a glimpse of my passion for frills & lace</font></th>
 <img width="280px" height="auto" src="https://file.pooftie.me/f/26.jpg"/><br><br>
 <br>
 <img width="280px" height="auto" src="https://file.pooftie.me/f/27.jpg"/><br><br>
+<br>
+<img width="280px" height="auto" src="https://file.pooftie.me/f/028.jpg"/><br><br>
 <br>
 <img width="280px" height="auto" src="https://file.pooftie.me/f/28.jpg"/><br><br>
 <br>
