--- a/portfolio.html
+++ b/portfolio.html
@@ -765,8 +765,8 @@ function resetPlayer() {
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ sewing ..<br><br></font><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/rbrkEHH.jpg"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/tLGajfV.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/l6QyZw0.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/9pKl1Er.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/fknKzf5.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/RxFVZkb.jpg"><br><br>
 <img width="auto" height="280px" src="https://i.imgur.com/laqU3ts.jpg">
 <img width="auto" height="280px" src="https://i.imgur.com/Ynd8fVf.jpg"><br><br>
 <br><br><br>
