--- a/blog.html
+++ b/blog.html
@@ -595,7 +595,7 @@ the past days have been rainy here, and the smell of wet grass always remind me 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 this is the melody that plays in the background <sub>🦋</sub>
-the site from my childhood from also had a midi harp music playing, so i wanted to make something similar !
+the site from my childhood also had a midi harp music playing, and i wanted to make something similar !
 
 
 so, recently i was defining goals - realistic ones - so i can motivate myself to keep working actively on my small projects.
