--- a/blog.html
+++ b/blog.html
@@ -595,7 +595,7 @@ the past days have been rainy here, and the smell of wet grass always remind me 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 this is the melody that plays in the background <sub>🦋</sub>
-the site from my childhood from also had a midi harp music playing, so i wanted to make something similar !
+the site from my childhood also had a midi harp music playing, and i wanted to make something similar !
 
 
 so, recently i was defining goals - realistic ones - so i can motivate myself to keep working actively on my small projects.
@@ -2689,6 +2689,19 @@ until i can completely leave social media ( which i hope to do very soon ) i wil
 keep in mind that these codes were made by me, thinking on my own needs, and i am sharing it with you fluffies exactly as i use them <sub>🗝</sub>
 you are free to use them as you personally like, and modify according to your preferences. if you have some practice with css it should be enough for changing colors, images, or removing some stuff i did. feel free to experiment around !!
 
+
+<a name="applysnippets" id="applysnippets"></a>
+okay, but.. how to actually apply these snippets ?
+there are multiple ways of inserting javascript into a website, but i will tell you how i personally prefer to do it :
+
+<sub>📍</sub> on my <b>pc</b>, i use the opera browser, and there we can use chrome extensions, so i use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one. i tested multiple things, including inserting the code directly on the "inspect element" settings, but that extension is the most reliable way to insert the codes automatically to websites so far ( and it's very easy to use too ) .
+
+<sub>📍</sub> on my <b>android</b> phone, i use the kiwi browser, and there we can use chrome extensions, so i also use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one, and it works perfectly just as on pc. keep in mind that the youtube code only works on the "desktop view" of the site, but the other codes work okay on the mobile versions too. my tip is : use your phone horizontally when on youtube, and you will simply get used to it.
+
+<sub>📍</sub> on my <b>ipad</b>, i use the safari browser, and i use the "<a style="text-decoration: none;" href="https://apps.apple.com/us/app/safari-snippets/id1126048257" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">snippets</font></a>" app for inserting the codes manually on each website, as i enter them. it works pretty similarly to the "shortcuts" app ( it was freezing my ipad because the codes are too big, so i just downloaded the "snippets" as an alternative ) . you have to click on the "share" symbol on safari and then on the "inject snippet" button so you can insert the code on each website, after opening them. sadly, i found no automatic way to do that on ios .. so my tip is : have a clean profile saved on bookmarks so you won't risk seeing "unwanted" content once entering websites, before applying your code !
+
+
+
 i wish i could be more of an active help to others, and if i have to insert javascript into websites for achieving a more comfortable user experience, i am sharing them with you, in hopes to help in some way.
 
 the reality is that we have no control over our personal information on these platforms ( yes i do consider numbers something very personal, as it is clearly used for judging our "success" and "relevance" ) .
@@ -2738,15 +2751,6 @@ it is a big and very complicated project, but i believe in my dreams.
 i somehow made an online game, and that's because bubu, my loved ones, you fluffies, are giving me all the support in the world !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
 so i must work hard for us all, to have our very deserved comfort spaces, because it is never too much to ask for <sub>🫖</sub>
 
-
-okay, but.. how to apply these web code snippets ? ( i will put this into my /faq page )
-there are multiple ways of inserting javascript into a website, but i will tell you how i personally prefer to do it :
-
-<sub>📍</sub> on my <b>pc</b>, i use the opera browser, and there we can use chrome extensions, so i use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one. i tested multiple things, including inserting the code directly on the "inspect element" settings, but that extension is the most reliable way to insert the codes automatically to websites so far ( and it's very easy to use too ) .
-
-<sub>📍</sub> on my <b>android</b> phone, i use the kiwi browser, and there we can use chrome extensions, so i also use the "<a style="text-decoration: none;" href="https://chrome.google.com/webstore/detail/inject-code/jpbbdgndcngomphbmplabjginoihkdph" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">inject code</font></a>" one, and it works perfectly just as on pc. keep in mind that the youtube code only works on the "desktop view" of the site, but the other codes work okay on the mobile versions too. my tip is : use your phone horizontally when on youtube, and you will simply get used to it.
-
-<sub>📍</sub> on my <b>ipad</b>, i use the safari browser, and i use the "<a style="text-decoration: none;" href="https://apps.apple.com/us/app/safari-snippets/id1126048257" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">snippets</font></a>" app for inserting the codes manually on each website, as i enter them. it works pretty similarly to the "shortcuts" app ( it was freezing my ipad because the codes are too big, so i just downloaded the "snippets" as an alternative ) . you have to click on the "share" symbol on safari and then on the "inject snippet" button so you can insert the code on each website, after opening them. sadly, i found no automatic way to do that on ios .. so my tip is : have a clean profile saved on bookmarks so you won't risk seeing "unwanted" content once entering websites, before applying your code !
 
 
 now, to finish this post, i'll share with you some outfit projects that i have finished recently.
