--- a/recommended.html
+++ b/recommended.html
@@ -327,11 +327,20 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
+<a href="https://myfancybear.neocities.org" target="_blank"><img src="https://i.imgur.com/yUQBYJL.gif"></a>　
+<a href="https://nonkiru.art" target="_blank"><img src="https://i.imgur.com/W24EUMB.gif"></a>　
+<a href="https://fraildoll111.wixsite.com/mabelsdollhouse" target="_blank"><img src="https://i.imgur.com/Iurfdei.png"></a>　　
+
+<br><br>
+<a href="https://figs.neocities.org" target="_blank"><img src="https://i.imgur.com/KOV9oqx.gif"></a>　
+<a href="https://eau-de-parfum.neocities.org" target="_blank"><img src="https://i.imgur.com/HdZq76a.png"></a>　　<a href="https://fwoofies.neocities.org" target="_blank"><img width="auto" height="31px" src="https://i.imgur.com/wn17u5J.gif"></a>　　　
+
+<br><br>
 <a href="https://purinland.neocities.org" target="_blank"><img src="https://i.imgur.com/iUZ9hzH.png"></a>
-　<a href="https://mysweetpiano.neocities.org" target="_blank"><img src="https://i.imgur.com/f6ZDC1w.gif"></a>
+　<a href="https://strawberry-gashes.neocities.org" target="_blank"><img src="https://i.imgur.com/jxm5J4Q.gif"></a>　<a href="https://mysweetpiano.neocities.org" target="_blank"><img src="https://i.imgur.com/f6ZDC1w.gif"></a>　　
 
 <br><br><a href="https://web.archive.org/web/20071213151324/http://sozai-love.sakura.ne.jp:80/" target="_blank"><img src="https://i.imgur.com/81Si3Qn.gif"></a>
-　<a href="https://milkyglitter.webs.com/pretend" target="_blank"><img src="https://i.imgur.com/lX469Dt.gif"></a>
+　<a href="https://dreamroom.uwu.ai" target="_blank"><img src="https://i.imgur.com/4js1ly8.gif"></a>
 　<a href="https://web.archive.org/web/20090205041804mp_/http://party.chottu.net/" target="_blank"><img src="https://i.imgur.com/ZTxeP5F.gif"></a>　　
 
 <br><br><a href="http://kawaiiness.net/home.php" target="_blank"><img src="https://i.imgur.com/5EIix7h.gif"></a>
@@ -343,7 +352,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 　<a href="https://alicehome.suichu-ka.com" target="_blank"><img width="88px" height="31px"src="https://i.imgur.com/gWZZkeE.gif"></a>　　
 
 <br><br><a href="https://web.archive.org/web/20100204083502/http://www.jttk.zaq.ne.jp:80/tear" target="_blank"><img src="https://i.imgur.com/1prOYPq.gif"></a>
-　<a href="https://milkyglitter.webs.com" target="_blank"><img src="https://i.imgur.com/oMnUPo9.png"></a>
+　<a href="https://web.archive.org/web/20220530160753/https://milkyglitter.webs.com/" target="_blank"><img src="https://i.imgur.com/oMnUPo9.png"></a>
 　<a href="https://mizunotic.neocities.org" target="_blank"><img src="https://i.imgur.com/MIU0K8j.png"></a>　　
 
 <br><br><a href="https://web.archive.org/web/20070208044145/http://jewelry-sozai.jp:80/" target="_blank"><img src="https://i.imgur.com/LWu3wL7.gif"></a>
@@ -394,7 +403,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 　<a href="https://foxfable.fun" target="_blank"><img src="https://i.imgur.com/p2rgR8y.gif"></a>
 　<a href="https://rosedryad.neocities.org" target="_blank"><img src="https://i.imgur.com/rSB9QMd.gif"></a>　　‌‌
 
-　<br><br><a href="https://pompon.neocities.org" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
+　<br><br><a href="https://pompon.neocities.org/links.html" target="_blank"><img src="https://i.imgur.com/vaXnzqN.gif"></a>
 　<a href="https://sanhyo.neocities.org" target="_blank"><img src="https://i.imgur.com/VAuDFkt.gif"></a>
 　<a href="https://ratpilled.neocities.org" target="_blank"><img src="https://i.imgur.com/AzvzqGz.gif"></a>
 
