--- a/recommended.html
+++ b/recommended.html
@@ -327,6 +327,10 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
+<a href="https://vivarism.neocities.org" target="_blank"><img src="https://i.imgur.com/Q8GVTmZ.png"></a>　
+<a href="https://zucchini.cc" target="_blank"><img src="https://i.imgur.com/1nHEe4M.gif"></a>　　
+
+<br><br>
 <a href="https://myfancybear.neocities.org" target="_blank"><img src="https://i.imgur.com/yUQBYJL.gif"></a>　
 <a href="https://nonkiru.art" target="_blank"><img src="https://i.imgur.com/W24EUMB.gif"></a>　
 <a href="https://fraildoll111.wixsite.com/mabelsdollhouse" target="_blank"><img src="https://i.imgur.com/Iurfdei.png"></a>　　
