--- a/pupe/23.html
+++ b/pupe/23.html
@@ -210,57 +210,53 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf22.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf23.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf22+.png"></sub></sub></sub></sub> ‌ <b>lacy fairy</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf23+.png"></sub></sub></sub></sub> ‌ <b>rosy romance</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-‌ • Lace up pumps/wh13EJ
-<br>‌ • Fairy's long cape/wh13EJ
+‌ • Heart effect/11BJ
 <br>‌ • Glitter lip gloss/12KJ
-<br>‌ • White Flowers/wh12IJ
+<br>‌ • Lace short socks/pk12D
+<br>‌ • Star carpet/13AJ
 <br>‌ • Mascara/001
+<br>‌ • LOVE sofa/13FJ
 <br>‌ • Hair glitter/12KJ
-<br>‌ • Wood planter/yw13DJ
+<br>‌ • Frill cardigan/wh13G
 <br>‌ • Decolletage beaty cream/11KJ
-<br>‌ • A Bird of the Pastel woods/wh13CJ
+<br>‌ • Patchwork cushion/12AJ
+<br>‌ • Hair brush/10IJ
 <br>‌ • Glitteringly mat effect/11EJ
-<br>‌ • Flower lolita one-piece dress/11IJ
-<br>‌ • Green carpet/12AJ
 <br>‌ • X'mas lingerie/wh09L
-<br>‌ • Hand made room background/12FJ
-<br>‌ • Fluff of dandelion/11E
+<br>‌ • Heart Engagement Ring/13F
 <br>‌ • Manicure/pk12KJ
 <br>‌ • Eyebrow pencil001
-<br>‌ • Tiered Knee Skirt/wh13G
+<br>‌ • Sparkling heart cheek/pk12KJ
+<br>‌ • Tiered skirt/pk12EJ
+<br>‌ • Puff sleeved blouse/12F
 <br>‌ • Mini pedicure/pk11KJ
+<br>‌ • Polar bear slippers/11L
+<br>‌ • Simple ball earrings/wh09L
 <br>‌ • Brilliantlyglitteringly effect/11BJ
-<br>‌ • Elf ear cuffs/13GJ
-<br>‌ • Frill lace cardigan/wh13GJ
-<br>‌ • Sparkling heart cheek/or12KJ
+<br>‌ • Milky Princess Wall Paper/13AJ
+<br>‌ • Quilt box/13DJ
+<br>‌ • Maid-headdress/10IJ
+<br>‌ • Rose rich effect/11KJ
 <br>‌ • Cute pirate02/12G
 <br>‌ • Lip gloss/pk211KJ
-<br>‌ • Flower effect/11BJ
-<br>‌ • Flower hair band/11E
-<br>‌ • Flower Garden Fur Mat/gn12JJ
+<br>‌ • Sweet heart effect/11KJ
+<br>‌ • Soft heart effect/12BJ
 <br>‌ • Color contact lens 009
-<br>‌ • Nobel mini chair/11IJ
-<br>‌ • Eye glitter/11KJ
-<br>‌ • Sugar blouse/wh13GJ
-<br>‌ • Lily headdress/11EJ
-<br>‌ • Lace half pants/wh12CJ
-<br>‌ • Dandelion fairy's wings/11E<br>
+<br>‌ • Eye glitter/11KJ<br>
 </font>
 </div>
 </div>
 
-
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/lacy%20fairy.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/21"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/23"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/rosy%20romance.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/22"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
