--- a/pupe/24.html
+++ b/pupe/24.html
@@ -210,54 +210,51 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf23.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf24.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf23+.png"></sub></sub></sub></sub> ‌ <b>rosy romance</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf24+.png"></sub></sub></sub></sub> ‌ <b>angelic warmth</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-‌ • Heart effect/11BJ
-<br>‌ • Glitter lip gloss/12KJ
-<br>‌ • Lace short socks/pk12D
-<br>‌ • Star carpet/13AJ
+<br> • Glitter lip gloss/12KJ
+<br>‌ • Violin/12IJ
+<br>‌ • Thin Ribbon Headbandwh11H
+<br>‌ • Xmas harp/10LJ
 <br>‌ • Mascara/001
-<br>‌ • LOVE sofa/13FJ
+<br>‌ • Macaron marshmallow dress/13BJ
+<br>‌ • Standing collar stripe shirt/bg13GJ
 <br>‌ • Hair glitter/12KJ
-<br>‌ • Frill cardigan/wh13G
+<br>‌ • Stardust hair accessory/12AJ
+<br>‌ • Angel wings/10LJ
 <br>‌ • Decolletage beaty cream/11KJ
-<br>‌ • Patchwork cushion/12AJ
-<br>‌ • Hair brush/10IJ
+<br>‌ • Dolly long05/12DJ
 <br>‌ • Glitteringly mat effect/11EJ
 <br>‌ • X'mas lingerie/wh09L
-<br>‌ • Heart Engagement Ring/13F
+<br>‌ • Wide flooring/11IJ
 <br>‌ • Manicure/pk12KJ
 <br>‌ • Eyebrow pencil001
-<br>‌ • Sparkling heart cheek/pk12KJ
-<br>‌ • Tiered skirt/pk12EJ
-<br>‌ • Puff sleeved blouse/12F
+<br>‌ • Big Teddybear/12KJ
 <br>‌ • Mini pedicure/pk11KJ
-<br>‌ • Polar bear slippers/11L
-<br>‌ • Simple ball earrings/wh09L
 <br>‌ • Brilliantlyglitteringly effect/11BJ
-<br>‌ • Milky Princess Wall Paper/13AJ
-<br>‌ • Quilt box/13DJ
-<br>‌ • Maid-headdress/10IJ
-<br>‌ • Rose rich effect/11KJ
-<br>‌ • Cute pirate02/12G
+<br>‌ • Holiday Socks/wh12LJ
+<br>‌ • Choir's Cape/wh12L
+<br>‌ • Sparkling heart cheek/or12KJ
 <br>‌ • Lip gloss/pk211KJ
-<br>‌ • Sweet heart effect/11KJ
-<br>‌ • Soft heart effect/12BJ
+<br>‌ • Valentine memorial Wall Paper/13BJ
 <br>‌ • Color contact lens 009
-<br>‌ • Eye glitter/11KJ<br>
+<br>‌ • Princess effect/12KJ
+<br>‌ • Sheep skin boots/bg09K
+<br>‌ • Eye glitter/11KJ
+<br>‌ • Angel ring effect/11EJ
+<br>‌ • Lace half pants/wh12CJ<br>
 </font>
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/rosy%20romance.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/22"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/23"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/angelic%20warmth.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/23"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
