--- a/status.html
+++ b/status.html
@@ -491,7 +491,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px; height: 130px;overflow-x: hidden; padding-left: 275px; padding-top: 252px; z-index: 20; line-height:8px;"><br><br>
 <br>
-<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">sleepy</font>‌
+<sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#cfb6bb" style="font-size:9px;">hopeful</font>‌
 <br><br>
 <sub><img src="https://i.imgur.com/7zwZwR3.png"></sub>　<font color="#a59990" style="border-bottom:1px dashed #cfb6bb; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#cfb6bb" style="font-size:9px;">web coding</font><br><br>
 ‌‌　　<font color="#cfb6bb" style="font-size:9px;">graphic drawing & editing</font><br><br>
@@ -503,7 +503,9 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="padding-left: 140px; padding-top: 68px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 310px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;"><br>
 
+　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>12.18.22</sup></font> <font color="#c4b3b6">꒱</font>　create with your heart !!
 
+<br><br><br>
 　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>10.08.22</sup></font> <font color="#cfbec2">꒱</font>　rest in peace, my grumpy little angel
 
 <br><br><br>
@@ -530,8 +532,6 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <br><br><br>
 　<sub><img src="https://i.imgur.com/3ZPNzRB.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1;"><sup>02.22.22</sup></font> <font color="#cfbec2">꒱</font>　life is made of choices..
 
-<br><br><br>
-　<sub><img src="https://i.imgur.com/r2hI9Vg.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>01.30.22</sup></font> <font color="#c4b3b6">꒱</font>　create with your heart !!
 
 
 <br><br>
