--- a/blog.html
+++ b/blog.html
@@ -513,6 +513,142 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://middlepot.com/img/3.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>december . 31 . 2022</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🍪</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the cookies & hot chocolate season is back once again .. i mean, at least in my heart, since it's actually summer here in brazil ( and i'm enjoying it a lot, so i have no complains )
+but, somehow, it was actually kind of cold during christmas, so i got to have a little bit of a cozy experience myself <sub>☕️</sub>
+working on christmas related content and listening to wintery soundtracks always puts me in the mood too.
+
+it's common for me and bubu to work way too much during december, and it's always a bit overwhelming.. so this year we decided to take a break during the last week ( from xmas to new year's eve ), and it was the best thing !
+it's so nice to stop and just do nothing, you know .. we all deserve to take breaks and stop worrying. just completely stop. everything is okay <sub><sub>🎀</sub></sub>
+
+i haven't responded to emails nor worked on <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> orders that i got during this little vacation, so i will try to go through everything this next week !
+it might take a while though, and i am trying not to rush myself as i'm still recovering from anxiety, so please be patient with me <sub><sub>✏️</sub></sub>
+
+the break is over but i will still keep it easy, for working on my projects in a healthy slow pace !!
+i have many things planned for this new year, but one of these things is that i want to be a little kinder to myself, and stop pushing my limits.
+
+
+
+so, i spent most of this month working on the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> winter season and christmas event, and besides the stuff from last year ( you can check screenshots clicking <a id="linkbjinho" href="#xmasevent">here</a> ) i also made new tree ornaments, many new items to the shops, new free sweaters ..
+a few example outfits :</pre>
+<br><br>
+
+<center><img width="auto" height="200px" src="https://i.imgur.com/WmDa8BJ.png">　
+<img width="auto" height="200px" src="https://i.imgur.com/KjzCSe0.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/ONnrKcU.png"><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+.. and the "happy baby" laptop shop is back, with new stuff too <sub>⭐</sub>
+this was the most requested shop, during the whole year i got messages asking about when it would come back. i'm very happy to know that you fluffies like it, since i also love dressing up my pooftie with baby accessories !!
+it's absolutely adorable <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+here is the new furniture i made :</pre>
+<br><br>
+
+<center><img width="420px" height="auto" src="https://i.imgur.com/ykbKvUF.png"><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+these really match the cute + cozy winter aesthetic from this year's items, don't you think ?
+i especially love the table with the teddy bear, he's so cuddly <sub>🤍</sub>
+
+i also made this new winter mini game for the serene forest :</pre>
+<br><br>
+
+<center><img width="420px" height="auto" src="https://i.imgur.com/7fClhZZ.png"><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's a cute one about building a "snow teddy" and making happy memories <sub>🧸</sub>
+this is very useful, since you will need lots of happiness to buy clothes from the baby shop !
+
+
+
+other thing that we spent lots of time working on ( actually way more than the event, since most of it was already done ) was the house visiting features and new diary functions <sub><sub>🖋</sub></sub>
+now players can visit each other, and appear in real-time, so you can organize meetings with friends !!
+by watering other players' plants they get extra happiness bonus ( cumulative ), and you can also check their clothings and collections.
+not only that, but also do a little bit of a group chat by activating the new "guestbook mode", so you can make specific pages editable ( for everyone, friends, or specific friends ) so others can write on your diary !
+you can edit the pages' visibility. everything is private by standard <sub>🔒</sub>
+it's very nice to make collages together with friends this way, and it's also possible to talk with each other - even though it does take a few seconds for updates to appear.
+for better organizing diary pages i also added "bookmarks", and i found that very very useful for easily knowing which pages are public or not. also, it's cute <sub>🖇</sub>
+
+these new features are obviously not perfect, since a whole lot of new bugs appeared, and even after spending two weeks fixing them there are still a few weird things going on - but nothing too serious, so it's okay for now !
+( i'm sure there are bug report emails from during our little vacation, and we will go through them soon enough )
+
+i'm still organizing my guestbook pages, so i don't have any screenshots to show you yet,, but there are many players already making use of the new things, and it makes me so so so happy !!! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+simply seeing people playing never fails to put a smile on my face.
+after spending so much time working on something that is made for others to enjoy, sometimes i wonder "will people actually give this a try ? is it good enough like that ?"
+i keep working anyway, because even if only 01 person enjoys it, it's good enough. if i feel proud of it, and can have some fun with it myself, it's good enough.
+
+thank you so much for enjoying the clumsy little things we do - sometimes in a hurry, but always heartfully and with the best intentions <sub><sub>💗</sub></sub>
+
+we are trying not to stress too much, since it's only me and my fiancé working, and this game is not our full time job, and it already took us so long to release these features.. not just because of bugs, but other annoying things out of our control.
+i will talk about it later, when it's the right time !
+
+
+
+now, aside from my fluffy life content, i also took a bit of time to work on some html page ideas and study javascript <sub><sub>💻</sub></sub>
+i made two new pages for the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, the first one was the <a id="linkbjinho" href="https://dream.pooftie.me/nostalgia" target="_blank">nostalgia</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/nostalgia" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/DLzH7Wr.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really wanted to try making a cd that actually plays music + spins while doing so, and i'm very happy with the results !!
+i included on this page 3 nostalgic songs that marked specific times in my life, a white cat because i had many white cats during my childhood, a cute phone that reminds me of my first ever phone, with a cute & comfy anime image that reminds me of other similar images that i used to save in my folders just to keep looking at.
+the little gems falling are also a very nostalgic motif for me, and i actually bought some cute gem stickers recently to decorate my diary <sub>🦋</sub>
+in resume : this whole page is a comfort place for me, and i'm happy to share it with everyone !
+
+the other page i made was the <a id="linkbjinho" href="https://dream.pooftie.me/snowglobe" target="_blank">snowglobe</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/snowglobe" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/bNK0Hfj.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+if you're familiar with oldschool web graphics, you know that snowglobes are a classic. for some reason, everyone used to make snowglobes with all kinds of random things inside !
+i realized i never actually made one of these, so i made this interactive page.
+a big snowglobe with a lovely bunny plushie sleeping inside, but snow actually falls inside of it if you click <sub><sub>🌧</sub></sub>
+a simple page, but very cute and satisfying. i like it !!
+
+
+this post will be kind of a short one, for a change ..
+i actually missed writing short posts. isn't it weird how sometimes we miss the most simple and effortless things ?
+let's embrace this and allow ourselves to have pure, simple time !
+
+xoxo <sub>💘</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/3.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/18.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>november . 30 . 2022</center>
@@ -533,7 +669,7 @@ hopefully getting a new chair will also help with my posture <sub>🪑</sub>
 other than that, i managed to finish some things i needed for this month, and am finishing many other ones that you will get to see soon !!
 
 once the halloween event ended, i added the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> autumn season mini games on the gentle hills world area, the fund raising for making sweaters for the winter ( with 5 new medals !! ), and also fixed some bugs.
-( you can check screenshots of the autumn mini games on the blog's <a id="linkbjinho" href="/archive/index#autumnseason" target="_blank">/archive</a> )
+( you can check screenshots of the autumn mini games clicking <a id="linkbjinho" href="/archive/index#autumnseason" target="_blank">here</a> )
 
 
 then, i made two new mini games for the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties website</a> !
@@ -856,7 +992,7 @@ i especially love the teddy bear .. he's a cutie <sub>💟</sub>
 
 now for the halloween event itself, i included stuff from last year + new ones.
 i made new costumes & stuffies for the fair prizes, new halloween stickers, and of course, new autumn collections for the regular clothing shops !
-( you can check more screenshots of the halloween fair on the blog's <a id="linkbjinho" href="/archive/index#halloweenevent" target="_blank">/archive</a> )
+( you can check more screenshots of the halloween fair clicking <a id="linkbjinho" href="/archive/index#halloweenevent" target="_blank">here</a> )
 </pre>
 <br><br>
 
@@ -2504,7 +2640,7 @@ my craving for happy moments is bigger than anything else !
 another concern is that since i work so hard for my money, sometimes i feel really guilty because i know i could spend money on projects that are really important for me .. but we deserve to spend money on random things, for simply feeling happy. we work hard and deserve that, as much as anyone else, right ?
 as long as we don't spend all our money on silly things and end up debted, it is completely fine. <sub>👜</sub>
 money can't buy happiness, and the endless seek for it can actually bring lots of sadness.. it never stops, you always want more and more. i think we should care more about living in the present. money is simply a tool, and should be used to benefit our lives instead of controlling how we live it !
-
+<a name="xmasevent" id="xmasevent"></a>
 okay, so to finally begin sharing the content that i have worked on lately, let's check the my fluffy life christmas event & winter season :</pre>
 <br><br>
 
