--- a/pupe/25.html
+++ b/pupe/25.html
@@ -210,53 +210,53 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf24.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf25.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf24+.png"></sub></sub></sub></sub> ‌ <b>angelic warmth</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf25+.png"></sub></sub></sub></sub> ‌ <b>cherry princess</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
+<br> • Heart effect/11BJ
 <br> • Glitter lip gloss/12KJ
-<br>‌ • Violin/12IJ
-<br>‌ • Thin Ribbon Headbandwh11H
-<br>‌ • Xmas harp/10LJ
-<br>‌ • Mascara/001
-<br>‌ • Macaron marshmallow dress/13BJ
-<br>‌ • Standing collar stripe shirt/bg13GJ
-<br>‌ • Hair glitter/12KJ
-<br>‌ • Stardust hair accessory/12AJ
-<br>‌ • Angel wings/10LJ
-<br>‌ • Decolletage beaty cream/11KJ
-<br>‌ • Dolly long05/12DJ
-<br>‌ • Glitteringly mat effect/11EJ
-<br>‌ • X'mas lingerie/wh09L
-<br>‌ • Wide flooring/11IJ
-<br>‌ • Manicure/pk12KJ
-<br>‌ • Eyebrow pencil001
-<br>‌ • Big Teddybear/12KJ
-<br>‌ • Mini pedicure/pk11KJ
-<br>‌ • Brilliantlyglitteringly effect/11BJ
-<br>‌ • Holiday Socks/wh12LJ
-<br>‌ • Choir's Cape/wh12L
-<br>‌ • Sparkling heart cheek/or12KJ
-<br>‌ • Lip gloss/pk211KJ
-<br>‌ • Valentine memorial Wall Paper/13BJ
-<br>‌ • Color contact lens 009
-<br>‌ • Princess effect/12KJ
-<br>‌ • Sheep skin boots/bg09K
-<br>‌ • Eye glitter/11KJ
-<br>‌ • Angel ring effect/11EJ
-<br>‌ • Lace half pants/wh12CJ<br>
+<br> • Fur shawl/10L
+<br> • Cherry Blossom fan/11H
+<br> • Mascara/001
+<br> • Hair glitter/12KJ
+<br> • Decolletage beaty cream/11KJ
+<br> • Dolly long05/12DJ
+<br> • Japanese wedding dress/13FJ
+<br> • Glitteringly mat effect/11EJ
+<br> • Kimono-lolita mini dress/13CJ
+<br> • Cherry tree/12CJ
+<br> • Wide flooring/11IJ
+<br> • Manicure/pk12KJ
+<br> • Eyebrow pencil001
+<br> • Sparkling heart cheek/pk12KJ
+<br> • Mini pedicure/pk11KJ
+<br> • Brilliantlyglitteringly effect/11BJ
+<br> • Cheerful birds/10F
+<br> • Bridal inner for dress/13F
+<br> • Lip gloss/pk211KJ
+<br> • Sweet heart effect/11KJ
+<br> • Valentine memorial Wall Paper/13BJ
+<br> • Soft heart effect/12BJ
+<br> • Japanses sandals/13F
+<br> • Japanese lolita big ribbon/13CJ
+<br> • Color contact lens 009
+<br> • Large white ribbon/10FJ
+<br> • Japanese socks/13F
+<br> • Eye glitter/11KJ
+<br> • Screen-cherry blossoms/13FJ
+<br> • Flower Shoulder stole/pk13GJ
+<br> • Cherry blossom petal/wh13CJ<br>
 </font>
 </div>
 </div>
 
-
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/angelic%20warmth.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/23"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/25"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/cherry%20princess.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/24"><font color="#b08087">← previous outfit</font></a>
 </font>
 
 </body>
