--- a/pupe/24.html
+++ b/pupe/24.html
@@ -217,7 +217,7 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf24+.png"></sub></sub></sub></sub> ‌ <b>angelic warmth</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-<br> • Glitter lip gloss/12KJ
+ • Glitter lip gloss/12KJ
 <br>‌ • Violin/12IJ
 <br>‌ • Thin Ribbon Headbandwh11H
 <br>‌ • Xmas harp/10LJ
