--- a/pupe/25.html
+++ b/pupe/25.html
@@ -217,7 +217,7 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf25+.png"></sub></sub></sub></sub> ‌ <b>cherry princess</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-<br> • Heart effect/11BJ
+ • Heart effect/11BJ
 <br> • Glitter lip gloss/12KJ
 <br> • Fur shawl/10L
 <br> • Cherry Blossom fan/11H
