--- a/gaming.html
+++ b/gaming.html
@@ -747,7 +747,7 @@ cutest baby there is.<br>
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
 <font color="#a8958d">　<b>poupée girl</b><br>
 　　　backup server : bentewee<br>
-　　　invitation codes : 2 left<br><br><br>
+　　　invitation codes : 8 left<br><br><br>
 
 <div style="position:relative; left:50px; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 300px; height: 275px; line-height:10px;">
 <iframe id="frame" src="/pupe/25" style="position:absolute; z-index:8; height:430px; width:540px; border:none; overflow:hidden; top:5px; left:5px;" scrolling="no"></iframe>
@@ -758,9 +758,9 @@ cutest baby there is.<br>
 
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
 <font color="#a8958d">　<b>transformice</b><br>
-　　　community : international<br><br><br>
+　　　community : brazilian<br><br><br>
 
-<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 220px; line-height:10px; padding:5px;">
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 240px; line-height:10px; padding:5px;">
 <img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/1wEj8uk.png">
 
         <script type = "text/javascript">
@@ -782,80 +782,103 @@ cutest baby there is.<br>
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
 　<font color="#b89196">level :</font> 58<br>
 　<font color="#b89196">fav mode :</font> normal<br>
-　<font color="#b89196">fav title :</font> snowdrop<br>
-　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="30px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
+　<font color="#b89196">fav title :</font> snow angel<br>
+　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="40px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
 <br></font>
  ‌ <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/6QZYFsf.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
 　<font color="#b89196">spiritual guide [28]</font><br>
 　<font color="#b89196">wind master [26]</font><br>
 　<font color="#b89196" style="line-height:5px;">physicist [03]<br><br></font>
-　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="70px" src="https://i.imgur.com/q8leahH.png"></sub><br></font>
+　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="80px" src="https://i.imgur.com/q8leahH.png"></sub><br></font>
 
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
 　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
-<div style="overflow:hidden; border: 5px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 95px; height: 75px; overflow-x:hidden; padding:3px; margin-top:5px;">
-<div style="border: none; width: 87px; height: 73px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:10px; padding-right:5px; padding-left:1px;">
+<div style="overflow:hidden; border: 5px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 95px; height: 100px; overflow-x:hidden; padding:3px; margin-top:5px;">
+<div style="border: none; width: 90px; height: 100px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:10px; padding-right:5px; padding-left:1px;">
 ‌<font color="#b0878d" style="font-size:7px;">
-• Little Mouse<br>
- ‌ • Shaman Disciple<br>
- ‌ • Accomplished<br>Shaman<br>
- ‌ • Shaman<br>
- ‌ • Greedy Mouse<br>
- ‌ • Here ! Cheese !<br>
- ‌ • Yeeeeah Cheese ^^<br>
- ‌ • Cheeeeeese *-*<br>
- ‌ • Fast Mouse<br>
- ‌ • Agile Mouse<br>
- ‌ • Glutton Mouse<br>
- ‌ • Gleany<br>
- ‌ • Plumpy Mouse<br>
- ‌ • Paunchy Mouse<br>
- ‌ • Chubby Mouse<br>
- ‌ • Fluffy Mouse<br>
- ‌ • Tubby Mouse<br>
- ‌ • The Chubby<br>
- ‌ • The Puffy<br>
- ‌ • Activist Mouse<br>
- ‌ • Unionized Mouse<br>
- ‌ • Mouse on Strike<br>
- ‌ • The Cheese Initiated<br>
- ‌ • The Cheese Adept<br>
- ‌ • The Cheese<br>Priestess<br>
- ‌ • The Reaper<br>
- ‌ • Cheese Finder<br>
- ‌ • Cheese Knight<br>
- ‌ • Cheesegrubber<br>
- ‌ • Fatty<br>
- ‌ • Stout Mouse<br>
- ‌ • Nice Mouse<br>
- ‌ • Adorable Mouse<br>
- ‌ • Charming Mouse<br>
- ‌ • Pretty Mouse<br>
- ‌ • Cute Mouse<br>
- ‌ • Frivolous Mouse<br>
- ‌ • Nice Mouse<br>
- ‌ • Adorable Mouse<br>
- ‌ • Charming Mouse<br>
- ‌ • Pretty Mouse<br>
- ‌ • Cute Mouse<br>
- ‌ • Frivolous Mouse<br>
- ‌ • Snob Mouse<br>
- ‌ • Stylish Mouse<br>
- ‌ • Actress Mouse<br>
- ‌ • Generous<br>
- ‌ • Fiancée<br>
- ‌ • Snowball<br>
- ‌ • Cookies Eater<br>
- ‌ • Cookies Eater<br>
- ‌ • I Cheese You<br>
- ‌ • Trick or Treat<br>
- ‌ • Ghostbuster<br>
- ‌ • Scooby-Doo<br>
- ‌ • Little Bell<br>
- ‌ • Souris-chan<br>
- ‌ • Transformist<br>
- ‌ • Earthworm<br>
- ‌ • Jack-o'-lantern<br>
+ • Little Mouse<br>
+ • Shaman Disciple<br>
+ • Accomplished Shaman<br>
+ • Shaman<br>
+ • Shaman Master<br>
+ • Greedy Mouse<br>
+ • Here ! Cheese !<br>
+ • Yeeeeah Cheese ^^<br>
+ • Cheeeeeese *-*<br>
+ • Fast Mouse<br>
+ • Agile Mouse<br>
+ • Inspired Shaman<br>
+ • Glutton Mouse<br>
+ • Gleany<br>
+ • Plumpy Mouse<br>
+ • Paunchy Mouse<br>
+ • Chubby Mouse<br>
+ • Fluffy Mouse<br>
+ • Tubby Mouse<br>
+ • The Chubby<br>
+ • The Puffy<br>
+ • Activist Mouse<br>
+ • Unionized Mouse<br>
+ • Mouse on Strike<br>
+ • The Cheese Initiated<br>
+ • The Cheese Adept<br>
+ • The Cheese Priestess<br>
+ • The Reaper<br>
+ • Cheese Finder<br>
+ • Cheese Knight<br>
+ • Cheesegrubber<br>
+ • Fatty<br>
+ • Stout Mouse<br>
+ • Cheese Lover<br>
+ • Camembert<br>
+ • Pont-L'Évêque<br>
+ • Cheese Catcher<br>
+ • Nice Mouse ★<br>
+ • Adorable Mouse ★<br>
+ • Charming Mouse ★<br>
+ • Pretty Mouse<br>
+ • Cute Mouse<br>
+ • Frivolous Mouse<br>
+ • Snob Mouse<br>
+ • Stylish Mouse<br>
+ • Actress Mouse<br>
+ • Fashion Mouse<br>
+ • Sexy<br>
+ • Superstar<br>
+ • Little Snowflake<br>
+ • Christmas Spirit<br>
+ • Decorator<br>
+ • Generous<br>
+ • Snowstorm<br>
+ • Fiancée<br>
+ • Tonnerre de Brest<br>
+ • Snowball<br>
+ • I'm cold<br>
+ • Cookies Eater<br>
+ • I Cheese You<br>
+ • Trick or Treat<br>
+ • Candy Cane<br>
+ • Fairy Lights<br>
+ • Snow Angel<br>
+ • Ghostbuster<br>
+ • Scooby-Doo<br>
+ • Little Bell<br>
+ • Souris-chan<br>
+ • Raclette<br>
+ • Transformist<br>
+ • Frozen<br>
+ • Snowboarder<br>
+ • Little Reindeer<br>
+ • Earthworm<br>
+ • Jack-o'-lantern<br>
+ • Glazed chestnut<br>
+ • Skeleton<br>
+ • Snowdrop<br>
+ • Igloo<br>
+ • Heartbreaker<br>
+ • Will You Brie Mine?<br>
+ • Aurora Borealis<br>
+ • Snowmouse<br>
 </font>
 </div>
 
