--- a/blog.html
+++ b/blog.html
@@ -580,7 +580,7 @@ this is very useful, since you will need lots of happiness to buy clothes from t
 
 
 
-other thing that we spent lots of time working on ( actually way more than the event, since most of it was already done ) was the house visiting features and new diary functions <sub><sub>🖋</sub></sub>
+other thing that we spent lots of time working on ( now that i think of it, it actually took us way more time than the event itself, since most of it was already done ) was the house visiting features and new diary functions <sub><sub>🖋</sub></sub>
 now players can visit each other, and appear in real-time, so you can organize meetings with friends !!
 by watering other players' plants they get extra happiness bonus ( cumulative ), and you can also check their clothings and collections.
 not only that, but also do a little bit of a group chat by activating the new "guestbook mode", so you can make specific pages editable ( for everyone, friends, or specific friends ) so others can write on your diary !
