--- a/blog.html
+++ b/blog.html
@@ -527,8 +527,10 @@ working on christmas related content and listening to wintery soundtracks always
 it's common for me and bubu to work way too much during december, and it's always a bit overwhelming.. so this year we decided to take a break during the last week ( from xmas to new year's eve ), and it was the best thing !
 it's so nice to stop and just do nothing, you know .. we all deserve to take breaks and stop worrying. just completely stop. everything is okay <sub><sub>🎀</sub></sub>
 
-i haven't responded to emails nor worked on <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> orders that i got during this little vacation, so i will try to go through everything this next week !
+i haven't read most of my emails nor worked on <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> orders that i got during this little vacation, so i will try to go through everything this next week !
 it might take a while though, and i am trying not to rush myself as i'm still recovering from anxiety, so please be patient with me <sub><sub>✏️</sub></sub>
+keep in mind that i won't write back to everyone, since i have dozens of emails there now, it would be too much .. i always read everything, i just try to prioritize my time & energy into writing to those who need a thoughtful, detailed response.
+( you can read about how i organize message priorities on my /faq, clicking <a id="linkbjinho" href="/faq#messages" target="_blank">here</a> )
 
 the break is over but i will still keep it easy, for working on my projects in a healthy slow pace !!
 i have many things planned for this new year, but one of these things is that i want to be a little kinder to myself, and stop pushing my limits.
@@ -2094,15 +2096,16 @@ now back to the subject : with all those changes, you may be wondering how to me
 i do participate in small platforms & communities, and i like using all kinds of message boards on people's sites, but emails are the standard option of contacting someone on the internet.
 i will always prefer a safe & organized space for talking, especially for giving support.
 please, let me know if i can help, and i will do my best !!
-i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i always check my inbox ( might take a long time to respond, but i read everything ) and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
-<sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
+<sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items. <font color="#d3a5a5" style="font-size:11px;">♡</font>
 if interested, please let me know by email !
 
-<sub>🧷</sub> i respond to <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't talk about serious things in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
+<sub>🧷</sub> i respond to some <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't ask for support in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
 
 <sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.
 
+( you can read about how i organize message priorities on my /faq, clicking <a id="linkbjinho" href="/faq#messages" target="_blank">here</a> )
 
 
 now about discord & line .. i stopped using them because as i have mentioned a few times, these apps have some problems ( including safety issues, unhealthy social-media-like features, and multiple paywalls ) , so i don't feel 100% comfortable using them. because of all that, my accounts have become private for a long time, until i gave up completely.
