--- a/faq.html
+++ b/faq.html
@@ -704,26 +704,34 @@ also : we must accept that other people can find success by doing similar things
 <font color="#B1A69E">
 <pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">since i am receiving many messages lately, but i am also working a lot lately, it's expected that i would start to be seen as a little unapproachable.. which makes me a little worried, so i'm here to clarify :
 i feel really happy with messages i receive, knowing that you took a bit of your time to make me smile, or that you trust me enough for asking for advice .. it's certainly a delight <font color="#d3a5a5" style="font-size:11px;">♡</font>
-so i try my best to respond to everyone thoughtfully, but when people start resending messages over and over ( probably because they think that i haven't seen it ) it gets quite overwhelming..
-i love talking to you fluffies, and helping as i can. many messages i receive are requests of advice, specific content, or complicated questions - things that would take me a while to do. i try to respond to quick messages as soon as i see them, but when it comes to writing a big message, i take some time during the day to respond, but sometimes i can't get through everyone, because i'm way too tired, and can't get the time to do so ;;
+i always do my best to read everything, but sadly it's not always possible to write back to every single person ..
 
-needless to say, i prioritize my health above fulfilling very specific requests of a single person ( i try to do that as well, but i can't do that for everyone ) .. if it is of interest of multiple people, i will certainly save the request on my notes to post about it later on !
-so if i couldn't respond to your message, please know that there is a reason, and it's not because you're bothering me. maybe i will still respond to it at some point, or even post about it, if it's an interesting request. i also can't get to write a huge q&a text every post, even if i have a list of requests, because it easily takes hours and well.. sometimes, i would rather give myself some rest instead ~
-i never find your lovely messages a bother ( if, naturally, a kind and honest message, of course ) but i ask for your patience when it comes to responses, because i like to make sure i'm responding, helping & clarifying doubts properly. that always takes some time to do.
-i also can't completely ignore the doubts of people who are not so kind with their choice of words - even if i never respond to them - i try to clarify the situation writing about it here as well ( if there is a point in their message, and not just meaningless hate, or a random rumor ) .. !
+i love talking to you fluffies, and helping as i can. many messages i receive are requests of support, advice, specific content, or complicated questions - things that would take me a while to do. because of that, i try to prioritize my time & energy into writing to those who need a thoughtful, detailed response. if i have enough free time, i try to respond to everyone, but it's not always doable, much less in a timely manner.
+when it comes to writing messages, it can take quite some time to do so, especially the way i do. if you ever exchanged emails with me you know what i'm talking about : i write pretty long virtual letters !
+and i love doing so, don't get me wrong - but sometimes my inbox get so full, with dozens of messages, so i have to be very careful not to push myself to exhaustion.
+i am a very introverted person, and on top of that i have to fight social anxiety on a daily basis.
+because of that, socializing can be really hard, really tiring, and i simply can't find any energy left after hours of typing ;;
 
-<b>edit //</b> if you are wondering where to message me :
+needless to say, i prioritize my health above fulfilling very specific requests ( i try my best, but i obviously can't do that for everyone ) .. if it is of interest of multiple people, i will certainly keep notes !
+so if i couldn't respond to your message, please know that there is a reason, and i'm not ignoring on purpose. maybe i will still respond to it at some point, or even post about it, if it's an interesting request. in any case, be sure that i have read it - i always do !
+rest assured : i never find your lovely messages a bother ( if, naturally, a kind and honest message, of course ) but i ask for your patience.
+as i said before, i like to make sure i'm responding, helping & clarifying doubts properly. that easily takes hours to do, and well.. sometimes, i would rather give myself some rest instead.
+when people start resending messages over and over ( probably because they think that i haven't seen it ) it gets quite overwhelming .. and there is even a risk of you getting flagged as spam !
+
+i also can't completely ignore the doubts of people who are not so kind with their choice of words - even if i never respond to them - if i can clarify or fix anything, i do so, then write about the topic here ( if there is a point in their message, and not just meaningless hate, or a random rumor ) .. !
+
+<b>edit //</b> if you are wondering where you can message me :
 
 <sub>🧷</sub> please don't hesitate to reach me out by sending an email to <a id="linkbjinho" href="mailto:letters@middlepot.com">letters@middlepot.com</a> or simply using the <a id="linkbjinho" href="https://middlepot.com/contact" target="_blank">contact form</a> !
 i do participate in small platforms & communities, and i like using all kinds of message boards on people's sites, but emails are the standard option of contacting someone on the internet.
 i will always prefer a safe & organized space for talking, especially for giving support.
 please, let me know if i can help, and i will do my best !!
-i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i always check my inbox ( might take a long time to respond, but i read everything ) and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 <sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items. <font color="#d3a5a5" style="font-size:11px;">♡</font>
 if interested, please let me know by email !
 
-<sub>🧷</sub> i respond to <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't talk about serious things in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
+<sub>🧷</sub> i respond to some <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't ask for support in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
 
 <sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.</pre><br><br><br><br><br><br>
 </font>
