--- a/recommended.html
+++ b/recommended.html
@@ -328,6 +328,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <br><br>
 
 <a href="https://vivarism.neocities.org" target="_blank"><img src="https://i.imgur.com/Q8GVTmZ.png"></a>　
+<a href="https://blog.nigohyu.com" target="_blank"><img src="https://i.imgur.com/b2W4CWj.gif"></a>　
 <a href="https://zucchini.cc" target="_blank"><img src="https://i.imgur.com/1nHEe4M.gif"></a>　　
 
 <br><br>
