--- a/faq.html
+++ b/faq.html
@@ -1030,7 +1030,7 @@ i think there are not many secrets to getting your nails healthy, i think proper
 it's very important to also keep your nails clean and moisturized when outside, so i never forget to carry some baby wipes and moisturizer !<br>
 i always cut the cuticles ( not too much, just the excess ) to keep things clean, and avoid picking on them when i'm bored. i prefer to file my natural nails short & oval shape, and i like to wear a thin coat of clear gel polish, just to keep them shiny & cute at all times.<br>
 <b>edit //</b> i recently got into nail art again after many years, but now i'm only doing it on fake nails, so i can easily glue them on & off when i'm in the mood for dressing up. way more comfortable !<br>
-i file them a little longer than my natural nails & almond shape, and i like to paint them with "jelly" gel polish, making gradients of soft pinks, whites or creams .. sometimes i glue little things on them too, like ribbons or hearts.<br>
+i file them a little longer than my natural nails & almond shape, and i like to paint them with "jelly" gel polish, making gradients of soft pinks, whites or creams .. sometimes i apply a bit of glitter, or glue little things on them, like ribbons or hearts.<br>
 <br>
 　　<sub>💓</sub> tl ; dr :<br>
 if you always stay clean, moisturized and hydrated you will always be healthy and flawless from the beginning until the end of the day, which will definitely make your life a lot better !!<br>
