--- a/pupe/26.html
+++ b/pupe/26.html
@@ -253,7 +253,7 @@ menuuuuuuuuuuuuuuu
 </div>
 
 <font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/cherry%20princess.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="https://file.pooftie.me/pupe/winter%20adventures.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
 <a href="/pupe/25"><font color="#b08087">← previous outfit</font></a>
 </font>
 
