--- a/pupe/3.html
+++ b/pupe/3.html
@@ -214,7 +214,7 @@ menuuuuuuuuuuuuuuu
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><img width="auto" height="30px" src="https://file.pooftie.me/pupe/puf3+.png"></sub></sub></sub> ‌ <b>sleepy doll outfit</b><br></font>
+<sub><sub><sub><img width="auto" height="30px" src="https://file.pooftie.me/pupe/puf3+.png"></sub></sub></sub> ‌ <b>sleepy doll</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 ‌• Mascara/001<br>
