--- a/blog.html
+++ b/blog.html
@@ -2550,7 +2550,7 @@ depending on the chocolate you choose, your friend would receive an amount of "l
 so, this event was completely focused on exchanging cards and lots of love ( literally ) with everyone. isn't that adorable ? <font color="#d3a5a5" style="font-size:11px;">♡</font>
 i also really love the motifs & colors .. i tried to include lots of hearts and strawberries <sub>🍓</sub>
 
-oh, after releasing this event, i got to color another beautiful coloring page from my friend <a id="linkbjinho" href="https://dollrosenheart.wixsite.com/sketchblog" target="_blank">babydollsheart</a> !!
+oh, after releasing this event, i got to color another beautiful coloring page from my friend <a id="linkbjinho" href="https://scrapbookofabisquedoll.blogspot.com" target="_blank">babydollsheart</a> !!
 i used similar colors to the ones from the event :</pre>
 <br><br>
 
