--- a/links.html
+++ b/links.html
@@ -511,6 +511,8 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my side web pages :<div style="line-height:2px;"><br>
 <br></div>
 <div id="linkitems2" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
+<font color="#7a6b6b">color.</font> <a id="ooo" href="https://color.pooftie.me" target="_blank" >pack installing</a>
+<br>
 <font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" >my safe room</a>
 <br>
 <font color="#7a6b6b">dream.</font> <a id="ooo" href="https://dream.pooftie.me" target="_blank" > directory</a>
